k8s/overlays/local/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: beast-data
  labels:
    app.kubernetes.io/part-of: beast
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
